Fix glaring lattice renderer bug: When rendering a lattice containing only two nodes, the lattice renderer got stuck in an infinite loop. This was fixed by making top and bottom nodes movable if the lattice only consists of two nodes.

--- a/MEDoKyService/elgg-plugin/wespot_fca/css/fca.css
+++ b/MEDoKyService/elgg-plugin/wespot_fca/css/fca.css
@@ -3,6 +3,10 @@ th,tr,td {
 	vertical-align: bottom;
 }
 
+#minimized-dialog-container {
+	z-index: 110;
+}
+
 table {
 	/*  border: 1px solid black; */
 	border-collapse: collapse;
